MAGNOLIA-1234 : fixing layout issue with resin
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@7694 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-samples/src/main/resources/mgnl-files/docroot/samples/css/main.css
+++ b/magnolia-module-samples/src/main/resources/mgnl-files/docroot/samples/css/main.css
@@ -126,11 +126,11 @@ hr {
 }
 
 .spacer1 {
-    height: 10px;
+    margin-bottom: 1em;
 }
 
 .spacer2 {
-    height: 20px;
+    margin-bottom: 2em;
 }
 
 #footer {
